{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "c3c38ed1-67f6-4ae6-857c-25cd3fc3fa17",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "6d7537b4-be08-430b-ae6e-59fe72f0b85e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayerDash",
                    "type": "Button",
                    "id": "b1939c1c-1ebe-47e3-aaf4-ba7751a0f3bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "454e44b3-f42e-4afa-9453-33e66e7adc69",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "01e878dc-6d48-4503-a980-15912cf518e8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ee541e69-eed3-4678-a5bd-54afcfeee194",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "230a178c-0c00-41b6-a3ea-a3a5ee5068e1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ad239c71-1a1c-4546-b805-c44b8b65ac72",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0f89d8c5-7a84-42d7-bda8-7434abd96595",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}